# rMatterCertis

./: .env.development  .gitignore  .pre-commit-config.yaml  BACKEND_ONLY_CRUD_IMPLEMENTATION_COMPLETE.md  BACKEND_V4_IMPLEMENTATION_PLAN.md  FINAL_IMPLEMENTATION_SUMMARY.md.backup  IMPLEMENTATION_SUMMARY_v7.md  INTEGRATED_PHASE2_PLAN.md  NEXT_PHASE_IMPLEMENTATION_PLAN.md  PHASE2_CRAWLING_ENHANCEMENT_PLAN.md  PHASE3_COMPLETION_ROADMAP.md  PHASE4B_FULL_APPLICATION_COMPLETION_PLAN.md  README.md  STATUS_CHECK_IMPLEMENTATION.md.backup  VERIFY_RUNTIME_PLAN.md  index.html  package-lock.json  package.json  production_enhancement.sql  production_enhancement_v2.sql  tailwind.config.js  tailwind.config.ts  test_html_parsing.sh  test_pagination.rs  test_site_structure.sh  test_urls.md  tsconfig.json  vite.config.ts
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  dev.sh  page_id_test  page_id_test.rs  tauri.conf.json  test_calc  test_calculation  test_calculation.rs  test_integration.rs  test_url.rs
src-tauri/.cargo/: config.toml  config.toml.backup
src-tauri/benches/: shared_service_benchmark.rs
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  003_integrated_schema.sql  004_migrate_legacy_data.sql  005_add_product_id.sql  006_add_unique_slot_index.sql
src-tauri/migrations/archive/: 002_matter_products.sql  README.md
src-tauri/src/: application.rs  commands.rs  commands_crawling.rs  commands_integrated.rs  commands_new.rs  commands_simple.rs  crawl_engine.rs  crawling.rs  domain.rs  events.rs  infrastructure.rs  lib.rs  main.rs  new_architecture.rs  priority1_verification_tests.rs  test_execution_plan_page_slots.rs  test_http_client_config.rs  test_page_id_calculator.rs  test_pagination_integration.rs  test_utils.rs  utils.rs
src-tauri/src/_archive/commands/: modern_crawling.rs.bak.moved_20250816T011611  modern_crawling.rs.new.moved_20250816T011611
src-tauri/src/_archive/crawl_engine/: actor_system_bridge.rs  channel_types.rs  lib.rs
src-tauri/src/_archive/crawling/: README.md
src-tauri/src/_archive/infrastructure/: README.md  crawler.rs  crawling_result_repository.rs  http.rs  http_client.rs  matter_crawler.rs  matter_product_repository.rs  product_repository.rs  repositories_adapter.rs
src-tauri/src/application/: crawler_manager.rs  crawling_profile.rs  crawling_use_cases.rs  dto.rs  events.rs  integrated_use_cases.rs  mod.rs  page_discovery_service.rs  parsing_service.rs  shared_state.rs  shared_state_old.rs  state.rs  use_cases.rs  validated_config.rs  validated_crawling_config.rs
src-tauri/src/bin_disabled/: advanced_analysis.rs  test_core_functionality.rs  test_crawler.rs  test_db.rs  test_db_fast.rs  test_db_light.rs  test_db_path.rs  test_site_analysis.rs  test_with_utils.rs
src-tauri/src/commands/: CLEANUP_NOTE.md  actor_system_commands.rs  actor_system_monitoring.rs  actor_system_monitoring_backup.rs  actor_system_monitoring_simple.rs  advanced_engine_api.rs  config_commands.rs  crawling_session_manager.rs  crawling_test_commands.rs  crawling_v4.rs  dashboard_commands.rs  data_queries.rs  db_cleanup.rs  db_diagnostics.rs  db_repair.rs  debug_commands.rs  mod.rs  modern_crawling.rs  modern_crawling.rs.bak  new_arch_test.rs  parsing_commands.rs  performance_commands.rs  real_actor_commands.rs  real_actor_commands.rs.backup  real_crawling_commands.rs  service_based_reference.rs  simple_actor_test.rs  simple_crawling.rs  smart_crawling.rs  sync_commands.rs  sync_commands_tests.rs  system_analysis.rs  unified_crawling.rs  validation_commands.rs  window_management.rs
src-tauri/src/crawl_engine/: actor_event_bridge.rs  actor_system.rs  actor_system.rs.backup  actor_system_bridge.rs  actors.rs  channel_types.rs  channels.rs  integrated_context.rs  integration_tests.rs  mod.rs  new_architecture.rs  new_architecture.rs.backup  new_architecture_clean.rs  oneshot_integration_test.rs  resilience_result.rs  system_config.rs  task_actor.rs  ts_gen.rs
src-tauri/src/crawl_engine/actors/: actors.rs  batch_actor.rs  mod.rs  session_actor.rs  stage_actor.rs  types.rs
src-tauri/src/crawl_engine/channels/: channel_types.rs  mod.rs
src-tauri/src/crawl_engine/config/: mod.rs
src-tauri/src/crawl_engine/context/: integrated.rs  lib.rs  mod.rs
src-tauri/src/crawling/: mod.rs.backup  mod_clean_architecture.rs  mod_legacy.rs  orchestrator.rs  queues.rs  state.rs  tasks.rs  workers.rs
src-tauri/src/crawling_v4/: mod.rs
src-tauri/src/domain/: atomic_events.rs  constants.rs  entities.rs  events.rs  integrated_product.rs  matter_product.rs  mod.rs  pagination.rs  product.rs  product_url.rs  repositories.rs  services.rs  session_manager.rs  value_objects.rs
src-tauri/src/infrastructure/: advanced_crawling_engine.rs  config.rs  crawler.rs  crawling.rs  crawling_engine.rs  crawling_range_calculation_test.rs  crawling_range_calculation_test.rs.bak  crawling_result_repository.rs  crawling_service_impls.rs  data_processing_service_impls.rs  database.rs  database_connection.rs  database_paths.rs  features.rs  html_parser.rs  html_parser_old.rs  http.rs  http_client.rs  integrated_product_repository.rs  integrated_product_repository.rs.bak  logging.rs  matter_crawler.rs  matter_product_repository.rs  parsing.rs  parsing_error.rs  product_repository.rs  product_schema_adapter.rs  repositories.rs  repositories_adapter.rs  retry_manager.rs  service_based_crawling_engine.rs  simple_http_client.rs  system_broadcaster.rs  work_queue_engine.rs
src-tauri/src/new_architecture/: actor_event_bridge.rs  actor_system.rs  actor_system_original.rs.backup  actors.rs  channel_types.rs  context.rs  integrated_context.rs  integration_tests.rs  lib.rs  migration.rs  mod.rs  new_architecture.rs  new_architecture.rs.backup  new_architecture_clean.rs  oneshot_integration_test.rs  resilience_result.rs  results.rs  retry_calculator.rs  system_config.rs  task_actor.rs  ts_gen.rs
src-tauri/src/services/: dashboard_service.rs  mod.rs
src-tauri/src/types/: dashboard_types.rs  frontend_api.rs  mod.rs
src-tauri/tests/: resume_token_tests.rs  status_downshift_tests.rs
(+401 files in other folders)
