[package]
name = "matter-certis-v2"
version = "0.1.0"
description = "Matter Certis v2 - E-commerce Product Crawling Application"
authors = ["Chanseok <hi007chans@gmail.com>"]
edition = "2021"
default-run = "matter-certis-v2"

[workspace]
resolver = "2"

# Workspace members for possible future split
# members = ["crates/*"]

[workspace.dependencies]
# Future: shared dependencies can be defined here

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "matter_certis_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "time"] }
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"], optional = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate"] }
scraper = "0.18"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.7"
futures = "0.3"
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

# Optimize for faster compilation during development
[profile.dev]
# Faster compilation at the cost of runtime performance
opt-level = 0
debug = 1  # Reduced debug info for faster builds
split-debuginfo = "unpacked"  # Faster on macOS
incremental = true
codegen-units = 512  # Increased for better parallelization

# Faster test compilation
[profile.test]
opt-level = 0
debug = 1  # Reduced debug info for faster builds  
incremental = true
codegen-units = 512  # Increased for better parallelization

# Dependencies are still optimized even in dev mode
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.test.package."*"]
opt-level = 3
debug = false

