[package]
name = "matter-certis-v2"
version = "0.1.0"
description = "Matter Certis v2 - E-commerce Product Crawling Application"
authors = ["Chanseok <hi007chans@gmail.com>"]
edition = "2021"
default-run = "matter-certis-v2"

[workspace]
resolver = "2"

# Workspace members for possible future split
# members = ["crates/*"]

[workspace.dependencies]
# Future: shared dependencies can be defined here

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "matter_certis_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "time"] }
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"], optional = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate"] }
scraper = { version = "0.18", optional = true }
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.7"
futures = "0.3"
config = "0.13"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

# Optimize for faster compilation during development
[profile.dev]
# Minimal compilation for maximum speed
opt-level = 0
debug = 0  # No debug info for fastest builds
split-debuginfo = "off"  # Skip debug info splitting
incremental = true
codegen-units = 256  # Balanced parallelization
# Skip expensive checks
overflow-checks = false
debug-assertions = false
panic = "abort"  # Faster panics without unwinding

# Ultra-fast test compilation
[profile.test]
opt-level = 0
debug = 0  # No debug info for fastest builds
split-debuginfo = "off"
incremental = true
codegen-units = 256
overflow-checks = false
debug-assertions = false
panic = "abort"

# Dependencies are still optimized even in dev mode
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.test.package."*"]
opt-level = 3
debug = false

# 빠른 개발/테스트를 위한 feature 플래그
[features]
default = ["full"]
full = ["reqwest", "scraper", "tracing", "tracing-subscriber"]
minimal = []  # 최소 의존성으로 빠른 컴파일
test-utils = []  # 테스트 유틸리티 활성화

